added the functionality of graphs with user inputs

--- a/products/templates/products/graphDetails.html
+++ b/products/templates/products/graphDetails.html
@@ -1,6 +1,25 @@
 {% extends 'users/base.html' %}
 {% block content %}
-    <h1>{{labels}}</h1>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">{{product.product_name}}</h1>
+        <p class="lead">{{product.description}}</p>
+        <p class="lead">{{product.price}}</p>
+        <p class="lead">{{product.rating}}</p>
+        <p class="lead">{{product.number_of_users_bought}}</p>
+      </div>
+    </div>
+    <div class="dropdown">
+      <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Select Time Range
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="{% url 'new-graph-detail' product.product_id 7 %}">1 week</a>
+        <a class="dropdown-item" href="{% url 'new-graph-detail' product.product_id 21 %}">3 weeks</a>
+        <a class="dropdown-item" href="{% url 'new-graph-detail' product.product_id 30 %}">1 month</a>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <canvas id="myChart"></canvas>
     <script type="text/javascript">
