--- a/products/templates/products/phones.html
+++ b/products/templates/products/phones.html
@@ -1,7 +1,127 @@
 {% extends 'users/base.html' %}
+{% block style %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
+
+
+        .header {
+            padding: 5px;
+            text-align: center;
+            background: Black;
+            color: white;
+
+        }
+
+        #myImg {
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        #myImg:hover {
+            opacity: 0.7;
+        }
+
+        /* The Modal (background) */
+        .modal {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Stay in place */
+            z-index: 1;
+            /* Sit on top */
+            padding-top: 100px;
+            /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%;
+            /* Full width */
+            height: 100%;
+            /* Full height */
+            overflow: auto;
+            /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0);
+            /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.9);
+            /* Black w/ opacity */
+        }
+
+        /* Modal Content (Image) */
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 50%;
+            max-width: 400px;
+        }
+
+        /* Caption of Modal Image (Image Text) - Same Width as the Image */
+        #caption {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 400px;
+            text-align: center;
+            color: #ccc;
+            padding: 10px 0;
+            height: 150px;
+        }
+
+        /* Add Animation - Zoom in the Modal */
+        .modal-content,
+        #caption {
+            animation-name: zoom;
+            animation-duration: 0.6s;
+        }
+
+        @keyframes zoom {
+            from {
+                transform: scale(0)
+            }
+
+            to {
+                transform: scale(1)
+            }
+        }
+
+        /* The Close Button */
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* 100% Image Width on Smaller Screens */
+        @media only screen and (max-width: 300px) {
+            .modal-content {
+                width: 50%;
+            }
+        }
+
+
+        .checked {
+            color: orange;
+        }
+    </style>
+{% endblock style %}
 {% block content %}
+    <div class="header">
+        <h3>Mobile Phones</h3>
+    </div>
     {% for product in products %}
-        <div class="jumbotron jumbotron-fluid">
+        <!-- <div class="jumbotron jumbotron-fluid">
           <div class="container">
             <h1 class="display-4">{{product.product_name}}</h1>
             <p class="lead">{{product.description}}</p>
@@ -10,6 +130,81 @@
             <p class="lead">{{product.number_of_users_bought}}</p>
             <a href="{% url 'new-product-detail' product.product_id %}" class="btn btn-outline-info">More info</a>
           </div>
+        </div> -->
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <div>
+            <table CELLPADDING=25 CELLSPACING=30>
+                <tr>
+                    <!-- <td><strong>1.</strong></td> -->
+
+                    <!-- start of image -->
+                    <td><img id="myImg"
+                            src="/static/{{product.product_id}}.jpg"
+                            alt="{{product.product_name}}" >
+
+                        <!-- The Modal -->
+                        <div id="myModal" class="modal">
+                            <span class="close">&times;</span>
+                            <img class="modal-content" id="img01">
+                            <div id="caption"></div>
+                        </div>
+
+                        <script>
+                            // Get the modal
+                            var modal = document.getElementById("myModal");
+
+                            // Get the image and insert it inside the modal - use its "alt" text as a caption
+                            var img = document.getElementById("myImg");
+                            var modalImg = document.getElementById("img01");
+                            var captionText = document.getElementById("caption");
+                            img.onclick = function () {
+                                modal.style.display = "block";
+                                modalImg.src = this.src;
+                                captionText.innerHTML = this.alt;
+                            }
+
+                            // Get the <span> element that closes the modal
+                            var span = document.getElementsByClassName("close")[0];
+
+                            // When the user clicks on <span> (x), close the modal
+                            span.onclick = function () {
+                                modal.style.display = "none";
+                            }
+                        </script>
+                    </td>
+                    <!-- this is end of image -->
+                    <td>
+                        <h4>Price: {{product.price}}</h4>
+                    </td>
+                    <td>
+                        <strong><em>{{product.product_name}}</em></strong>
+                        <strong>{{product.description}}</strong>
+
+
+
+                        <div>
+                            <span class="heading">User Rating</span>
+                            <!-- <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star "></span> -->
+
+                            <p><strong>{{product.rating}}</strong> average based on {{product.number_of_users_bought}}.</p>
+                            <a href="{% url 'new-product-detail' product.product_id %}" class="btn btn-outline-info">More info</a>
+                            {% if user.is_superuser %}
+                                <a href="{% url 'product-delete' product.product_id %}" class="btn btn-outline-danger">Delete this product</a>
+                            {% endif %}
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
         </div>
+
     {% endfor %}
 {% endblock content %}
