--- a/users/templates/users/registeration.html
+++ b/users/templates/users/registeration.html
@@ -1,7 +1,7 @@
 {% extends 'users/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h1>Welcome to registeration page</h1>
+    <h2>Welcome to Registration page</h2>
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
